@@ -13,12 +13,12 @@
     <url>https://github.com/sisco70/data-jdbc-maven-plugin</url>
 
     <properties>
-        <maven.compiler.release>21</maven.compiler.release>
+        <maven.compiler.release>17</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <handlebars.version>4.3.1</handlebars.version>
+        <handlebars.version>4.5.0</handlebars.version>
         <snakeyml.version>2.5</snakeyml.version>
-        <maven.plugin.api.version>3.9.3</maven.plugin.api.version>
-        <maven.plugin.annotations.version>3.9.0</maven.plugin.annotations.version>
+        <maven.plugin.api.version>3.9.12</maven.plugin.api.version>
+        <maven.plugin.annotations.version>3.12.0</maven.plugin.annotations.version>
     </properties>
 
     <dependencies>
@@ -82,11 +82,16 @@
                     </execution>
                 </executions>
             </plugin>
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.11.0</version>
+                <version>3.15.0</version>
+                <configuration>
+                    <release>${maven.compiler.release}</release>
+                    <compilerArgs>
+                        <arg>-proc:full</arg>
+                    </compilerArgs>
+                </configuration>
             </plugin>
         </plugins>
     </build>
